[FIX] web: keep frame in sign box on wrong aspect ratio
Steps to reproduce:
- Install Sign
- Open Sign, add a document and put a signature box
- Make the sign box have a weird aspect ratio (very short and super wide
  for example)

Issues:
When you sign with the frame, the frame will be partially hidden making
the hash invisible.

Solution:
Put the container back just like in the 16.0, that way we don't have
the weird CSS behavior that we had previously.

opw-4042289

closes odoo/odoo#177500

X-original-commit: f626e0eb6c491f38e47ba6fd8dbe805b45e41674
Related: odoo/enterprise#68737

--- a/addons/web/static/src/core/signature/name_and_signature.scss
+++ b/addons/web/static/src/core/signature/name_and_signature.scss
@@ -3,6 +3,13 @@
     position: relative;
 }
 
+.o_web_sign_signature_container {
+    canvas {
+        width: 100%;
+        height: 100%;
+    }
+}
+
 .o_signature_stroke {
     position: absolute;
     border-top: #D1D0CE solid 2px;
